# zando

./: .env.dev  .gitignore  CLAUDE.md  CLAUDE_CHANGELOG.md  CLAUDE_DATABASE_REFACTOR_CHANGELOG.md  CLAUDE_MIGRATION.md  CLAUDE_PLAN.md  CLAUD_IMPLEMENTATION_PLAN.md  error.txt  test.ipynb  try.py
fastapi_migration/database/: CLAUDE_PLAN.md  Dockerfile  README.md  create_migration.py  db.py  db_config.yaml  init_alembic.py  migrations.yaml  pyproject.toml  requirements.txt  seed.py  sql_migration_manager.ipynb
fastapi_migration/database/.claude/: CLAUDE_EXPLANATION.md  CLAUDE_PLAN.md
fastapi_migration/database/.venv_database/: pyvenv.cfg
fastapi_migration/database/_Archive/POC/: google_session.py  migrate.py  migrations.py  project_settings.py
fastapi_migration/database/_Archive/_gold/: initialize.sql
fastapi_migration/database/_Archive/data/: ingredient_cautions.csv  snps.csv
fastapi_migration/database/_Archive/functions/: all_functions.sql  (+2 more)
fastapi_migration/database/db_migrations/: __init__.py  cli.py  migrations.yaml
fastapi_migration/database/dbt_project/: README.md  dbt_project.yml  profiles.yml.example  schema.sql  setup.sh  setup_database.sh
fastapi_migration/database/functions/: up.sql
fastapi_migration/database/migrations/: alembic.ini  env.py
fastapi_migration/database/models/: __init__.py  characteristic.py  condition.py  ingredient.py  snp.py
fastapi_migration/database/scripts/: gcloud_login.py  gcloud_login.sh
fastapi_migration/database/seed_data/: seed_utils.py  snps.py
fastapi_migration/database/tables/: alter.sql  up.sql
(+284 files in other folders)
